[tool.poetry]
name = "snl-data"
version = "0.1.0"
description = "SnL for data-diff"
authors = ["jeremytee97 <jeremytee97@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
snowflake-connector-python = "2.7.2"
psycopg2-binary = "^2.9.3"
pandas = "^1.4.4"
data-diff = {git = "https://github.com/datafold/data-diff.git"}

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
